# SentinelD

./: Cargo.toml
.kiro/specs/enterprise-tier-features/: design.md  tasks.md
.kiro/specs/sentineld-core-monitoring/: tasks.md
procmond/: Cargo.toml
procmond/src/ipc/: mod.rs  protocol.rs
sentinel-lib/: Cargo.toml
sentinel-lib/benches/: ipc_communication.rs  ipc_performance_comprehensive.rs
sentinel-lib/src/ipc/: client.rs  codec.rs  interprocess_transport.rs  mod.rs
sentinel-lib/tests/: ipc_comprehensive_integration.rs  ipc_cross_platform_tests.rs  ipc_integration.rs  ipc_property_based_tests.rs  ipc_security_validation.rs  resilient_client_integration.rs
sentinelagent/: Cargo.toml
sentinelagent/src/: ipc_client.rs
