[package]
name = "sentinelagent"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SentinelD Detection Orchestrator"
publish = true

[package.metadata.wix]
upgrade-guid = "93D6515D-DB7A-43E2-AF97-9CC73E38D93C"
path-guid = "6E74EC37-C9F9-4E4F-9586-299D2E02B22C"
license = false
eula = false

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }

# IPC communication
interprocess = { workspace = true }

# Protocol Buffers
prost = { workspace = true }
prost-types = { workspace = true }

# Database
redb = { workspace = true }

# Internal library
sentinel-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# SQL parsing
sqlparser = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
